--- a/team.html
+++ b/team.html
@@ -23,26 +23,25 @@
                         <img class=" team_page_logo mt-4" src="./assets/img/Homepage/svg/logo.svg" alt="logo">
                     </div>
                     <div class=" d-lg-none">
-                        <label for="menuicon">
+                        <ul class=" sm-screen pt-lg-5 mobile_view" id="navbar">
+                            <li class="nav_links_padding nav_line "><a href="main.html"
+                                    class="fs_nav  nav_links font_roboto" >Home</a></li>
+                            <li class="nav_links_padding nav_line"><a href="#real"
+                                    class="fs_nav nav_links font_roboto" >Practice
+                                    Areas</a></li>
+                            <li class="nav_links_padding nav_line"><a href="news.html"
+                                    class="fs_nav nav_links font_roboto" >News</a></li>
+                            <li class="nav_links_padding nav_line"><a href="team.html"
+                                    class="fs_nav nav_links font_roboto" >Team</a></li>
+                            <li class="nav_links_padding nav_line"><a href="#anything"
+                                    class="fs_nav nav_links font_roboto" >Contact</a>
+                            </li>
+                        </ul>
+                        <div onclick="openNav()" class="menu d-block d-xl-none z_7 pe-2">
                           <span></span>
+                          <span class="my-2"></span>
                           <span></span>
-                          <span></span>
-                      </label>
-                      <input type="checkbox" id="menuicon" hidden>
-                      <ul class=" sm-screen pt-lg-5">
-                          <li class="nav_links_padding nav_line "><a href="main.html"
-                                  class="fs_xsm  nav_links font_roboto">Home</a></li>
-                          <li class="nav_links_padding nav_line"><a href=""
-                                  class="fs_xsm nav_links font_roboto">Practice
-                                  Areas</a></li>
-                          <li class="nav_links_padding nav_line"><a href="news.html"
-                                  class="fs_xsm nav_links font_roboto">News</a></li>
-                          <li class="nav_links_padding nav_line"><a href=""
-                                  class="fs_xsm nav_links font_roboto">Team</a></li>
-                          <li class="nav_links_padding nav_line"><a href=""
-                                  class="fs_xsm nav_links font_roboto">Contact</a>
-                          </li>
-                      </ul>
+                        </div>
                       </div>
                    </div>
                 </div>
@@ -72,7 +71,7 @@
                                 </p>
                                 <div class="d-flex my-3">
                                     <a href="https://www.linkedin.com/in/miladboddoohi/" target="_blank">
-                                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
+                                        <svg class="my_icon" width="48" height="48" viewBox="0 0 48 48" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect class="transition_03s" width="48" height="48" fill="#FE6A5B"></rect>
                                             <path class="transition_03s"
@@ -81,7 +80,7 @@
                                         </svg>
                                     </a>
                                     <a href="https://twitter.com/thenyattorney" target="_blank" class="mx-3">
-                                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
+                                        <svg class="my_icon" width="48" height="48" viewBox="0 0 48 48" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect class="transition_03s" width="48" height="48" fill="#FE6A5B"></rect>
                                             <path class="transition_03s"
@@ -90,7 +89,7 @@
                                         </svg>
                                     </a>
                                     <a href="mailto:Milad@thebflawfirm.com">
-                                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
+                                        <svg class="my_icon" width="48" height="48" viewBox="0 0 48 48" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect class="transition_03s" width="48" height="48" fill="#FE6A5B"></rect>
                                             <path class="transition_03s"
@@ -182,7 +181,7 @@
 
                 <div class=" col-md-6 mt-sm-4 px-0 ">
                     <div class=" d-none d-md-block">
-                        <img class="w-100" src="./assets/img/Homepage/webp/co-founder-2.webp" alt="co-founder">
+                        <img class="w_100" src="./assets/img/Homepage/webp/co-founder-2.webp" alt="co-founder">
                     </div>
                 </div>
                 <div class=" col-md-6 py-lg-5 px-lg-5">
@@ -199,7 +198,7 @@
                                 </p>
                                 <div class="d-flex my-4">
                                     <a href="https://www.linkedin.com/in/miladboddoohi/" target="_blank">
-                                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
+                                        <svg class="my_icon" width="48" height="48" viewBox="0 0 48 48" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect class="transition_03s" width="48" height="48" fill="#FE6A5B"></rect>
                                             <path class="transition_03s"
@@ -208,7 +207,7 @@
                                         </svg>
                                     </a>
                                     <a href="https://twitter.com/thenyattorney" target="_blank" class="mx-3">
-                                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
+                                        <svg class="my_icon" width="48" height="48" viewBox="0 0 48 48" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect class="transition_03s" width="48" height="48" fill="#FE6A5B"></rect>
                                             <path class="transition_03s"
@@ -217,7 +216,7 @@
                                         </svg>
                                     </a>
                                     <a href="mailto:Milad@thebflawfirm.com">
-                                        <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
+                                        <svg class="my_icon" width="48" height="48" viewBox="0 0 48 48" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect class="transition_03s" width="48" height="48" fill="#FE6A5B"></rect>
                                             <path class="transition_03s"
@@ -478,6 +477,13 @@
             }
           });
             </script>
+             <script>
+                function openNav() {
+            document.getElementById("navbar").classList.toggle("start-0");
+            document.body.classList.toggle("overflow_hidden");
+            document.querySelector(".menu").classList.toggle("cross")
+          }
+              </script>
 </body>
 
 </html>
