--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
                                         Areas</a></li>
                                 <li class="nav_links_padding nav_line"><a href=""
                                         class="fs_xsm nav_links font_roboto">News</a></li>
-                                <li class="nav_links_padding nav_line"><a href=""
+                                <li class="nav_links_padding nav_line"><a href="team.html"
                                         class="fs_xsm nav_links font_roboto">Team</a></li>
                                 <li class="nav_links_padding nav_line"><a href=""
                                         class="fs_xsm nav_links font_roboto">Contact</a>
