--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
                 <div class="col-lg-2 p-0">
                    <div class="d-flex align-items-center justify-content-between">
                     <div>
-                      <a class="cursor_pointer" href="index.html"><img src="./assets/img/news/svg/logo.svg" class="mt-sm-4 mt-2 ms-lg-0 header_logo" /></a>
+                      <a  href="index.html"><img src="./assets/img/news/svg/logo.svg" class="mt-sm-4 mt-2 ms-lg-0 header_logo cursor_pointer" /></a>
                     </div>
                     <div class=" d-lg-none">
                       <ul class=" sm-screen pt-lg-5 mobile_view" id="navbar">
@@ -95,10 +95,10 @@
             </div>
           </div>
     </section>
-    <section class="bg-white row_border section_margin_top">
-        <div class="card_section_container">
-            <div class="row row_padding justify-content-center justify-content-xl-start">
-                <div class="col-md-6 col-xl-4 mb-lg-4 d-flex justify-content-center justify-content-xl-start">
+    <section class="bg-white row_border section_margin_top px-5 px-sm-4">
+        <div class="card_section_container px-5 px-sm-0">
+            <div class="row row_padding justify-content-center justify-content-lg-start">
+                <div class="col-sm-6 col-lg-4 mb-lg-4 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                         <img class="news-img" src="./assets/img/news/png/imgtwo.png" alt="">
                        <div class="my_slider_card">
@@ -130,7 +130,7 @@
                        </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-4 mb-lg-4 mt-3 mt-md-0 d-flex justify-content-center justify-content-xl-start">
+                <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-0 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
                         <img class="news-img" src="./assets/img/news/png/imageone.png" alt="">
@@ -166,7 +166,7 @@
                        </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-4 mb-lg-4 mt-3 mt-md-5 mt-xl-0 d-flex justify-content-center justify-content-xl-start">
+                <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 mt-lg-0 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
                         <img class="news-img" src="./assets/img/news/png/imgtwo.png" alt="">
@@ -203,7 +203,7 @@
                        </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-4 mb-lg-4 mt-3 mt-md-5 d-flex justify-content-center justify-content-xl-start">
+                <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
                         <img class="news-img" src="./assets/img/news/png/imgthree.png" alt="">
@@ -232,7 +232,7 @@
                        </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-4 mb-lg-4 mt-3 mt-md-5 d-flex justify-content-center justify-content-xl-start">
+                <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
                         <img class="news-img" src="./assets/img/news/png/imgfour.png" alt="">
@@ -260,7 +260,7 @@
                      </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-4 mb-lg-4 mt-3 mt-md-5 d-flex justify-content-center justify-content-xl-start">
+                <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
                         <img class="news-img" src="./assets/img/news/png/imgfour.png" alt="">
@@ -289,7 +289,7 @@
                      </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-4 mb-lg-4 mt-3 mt-md-5 d-flex justify-content-center justify-content-xl-start">
+                <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
                         <img class="news-img" src="./assets/img/news/png/imgfive.png" alt="">
@@ -319,7 +319,7 @@
                       </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-4 mb-lg-4 mt-3 mt-md-5 d-flex justify-content-center justify-content-xl-start">
+                <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
                         <img class="news-img" src="./assets/img/news/png/imgsix.png" alt="">
@@ -347,7 +347,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-4 mb-lg-4 mt-3 mt-md-5 d-flex justify-content-center justify-content-xl-start">
+                <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
                         <img class="news-img" src="./assets/img/news/png/imgseven.png" alt="">
@@ -379,7 +379,7 @@
                      </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-4 mb-lg-4 mt-3 mt-md-5 d-flex justify-content-center justify-content-xl-start">
+                <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
                         <img class="news-img" src="./assets/img/news/png/imgeight.png" alt="">
@@ -408,7 +408,7 @@
                      </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-xl-4 mb-lg-4 mt-3 mt-md-5 d-flex justify-content-center justify-content-xl-start d-md-none d-xl-block">
+                <div class="col-sm-6 col-lg-4 mb-lg-4 mt-3 mt-sm-5 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                       <div class="">
                         <img class="news-img" src="./assets/img/news/png/imgeight.png" alt="">
@@ -441,10 +441,10 @@
             </div>
         </div>
     </section>
-    <section class=" pt-lg-5 pb-lg-5 mx-auto bg-black">
+    <section class=" pt-lg-5 pb-lg-5 mx-auto bg-black section_margin_top"  id="anything">
       <div class=" container  main_container mx-auto ">
           <div class=" row pt-5 pb-5 d-flex justify-content-center  align-items-center">
-              <div class=" col-sm-6 ">
+              <div class=" col-sm-6 px-3 ">
                   <div class=" ">
                       <h2 class=" Anything text-white fs_xl font_roboto ">
                           <span class=" d-sm-block"> Anything you</span>
@@ -455,37 +455,37 @@
                               here if you have any questions</span> for us.
                       </p>
                       <div class="my-3">
-                          <p class=" text-white fs_xsm  font_roboto fw_600 mb-3  ">
+                          <p class=" text-white fs_xsm  font_roboto fw_400 mb-3  ">
                               Boddoohi &amp; Friedlander LLP
                           </p>
                           <a href="https://goo.gl/maps/MhVbDPtmKzWAweFJ6" target="_blank"
-                              class="text-white chng_clr_hover">
+                              class="text-white chng_clr_hover font_roboto">
                               <span class="d-block"> New York City Office:</span>
                               <span class="d-block"> 110 East 25th Street</span>
                               <span class="d-block"> New York, New York 10010</span>
                           </a>
                           <a href="https://maps.app.goo.gl/YNKQEtyfB5RiSHks6" target="_blank"
-                              class="text-white chng_clr_hover mt-3 d-block">
+                              class="text-white chng_clr_hover font_roboto mt-3 d-block">
                               <span class="d-block"> Hudson Valley Office:</span>
                               <span class="d-block"> 291 Wall Street, 4th Floor</span>
                               <span class="d-block"> Kingston, New York 12401</span>
                           </a>
                       </div>
-                      <p class=" text-white  fs_xsm  font_400 font_roboto">Call or Text Us</p>
+                      <p class=" text-white  fs_xsm  fw_400 font_roboto">Call or Text Us:</p>
                       <ul>
                           <li> <a href="tel:+
                   (347) 252 9922
-                " class=" text-white fs_xsm fw_400 font_roboto">
+                " class=" text-white fs_xsm fw_400 font_roboto chng_clr_hover">
                                   (347) 252 9922
                               </a></li>
                           <li> <a href="mailto:hello@thebflawfirm.com"
-                                  class="text-white fs_xsm fw_400 font_roboto ">hello@thebflawfirm.com</a></li>
+                                  class="text-white fs_xsm fw_400 font_roboto chng_clr_hover">hello@thebflawfirm.com</a></li>
                       </ul>
                   </div>
               </div>
-              <div class="col-sm-6 mt-4 mt-sm-0  ">
+              <div class="col-sm-6 mt-4 mt-sm-0 px-3  ">
                   <div>
-                      <input type="text" required="" class="form_contact" id="contact-form-name"
+                      <input type="text" required="" class="form_contact " id="contact-form-name"
                           placeholder="Your Name">
                   </div>
 
@@ -510,32 +510,33 @@
           </div>
       </div>
   </section>
-  <section class="bg-black footer_margin section_margin_top">
+   <!-- ---------------------footer_start-------------------------- -->
+   <section class="bg-black footer_margin section_margin_top">
     <div class="coustam_container ">
-        <div class="row justify-content-center justify-content-lg-between text-center">
-            <div class=" col-lg-2 d-none d-lg-block px-0 p-0">
+        <div class="row justify-content-center justify-content-lg-between text-center ">
+            <div class=" col-lg-2 d-none d-lg-block   p-0">
                 <div>
-                    <img class="mt-3 " src="./assets/img/Homepage/svg/footer-img.svg" alt="footer_img">
+                    <img class="mt-3 footer_img " src="./assets/img/Homepage/svg/footer-img.svg" alt="footer_img">
                 </div>
             </div>
-            <div class="col-12 col-lg-9 px-0 mt-lg-5 d-flex justify-sm-content-center align-items-sm-center align-items-lg-start flex-column ">
-                <div class=" pt-5 mt-lg-5 d-sm-flex px-3 ">
+            <div class="col-12 col-lg-9 px-0 mb-0 px-lg-5  pt-lg-5 d-flex justify-sm-content-center align-items-sm-center align-items-lg-start flex-column ">
+                <div class=" pt-5 mt-lg-5 d-sm-flex px-2 ">
                     <img class=" footer_logo_width cursor_pointer" src="./assets/img/Homepage/svg/logo.svg"
                         alt="footer_logo_width">
                 </div>
-                <div class=" footer_line my-4 mt-5"></div>
-                <div class="  d-sm-flex align-items-center   mt-2 gap_178  ">
-                    <ul class="d-sm-flex align-items-center  gap-5 gap-xxl-5 px-3  ">
+                <div class=" footer_line my-3 mt-5"></div>
+                <div class="  d-sm-flex align-items-center mt-2 gap_178  ">
+                    <ul class="d-sm-flex align-items-center  gap-5 gap-xxl-5 px-3 px-md-0   ">
                         <li> <a href="#real"
-                                class="text_footer fs_xsm font_roboto fw_500">Practice
+                                class="text_footer  font_roboto fw_500">Practice
                                 Areas</a></li>
                         <li>
-                            <a href="news.html" class="text_footer fs_xsm font_roboto fw_500">News</a>
+                            <a href="news.html" class="text_footer  font_roboto fw_500">News</a>
                         </li>
                         <li> <a href="team.html"
-                                class="text_footer fs_xsm font_roboto fw_500">Team</a>
+                                class="text_footer  font_roboto fw_500">Team</a>
                         </li>
-                        <li> <a href="#anything" class="text_footer fs_xsm font_roboto fw_500">Contact</a>
+                        <li> <a href="#anything" class="text_footer  font_roboto fw_500">Contact</a>
                         </li>
                     </ul>
                     <div class=" d-md-flex mt-lg-0 mt-4 mt-sm-0">
@@ -564,9 +565,9 @@
                         </a>
                     </div>
                 </div>
-                <div class="d-flex mt-sm-2 mt-4 pt-3 pt-sm-0 m-flex-column item-center pb-2 px-3">
+                <div class="d-flex mt-sm-2 mt-4 pt-3 pt-sm-0  item-center pb-2 px-3 px-md-0">
                     <p
-                        class=" fs_xxsm font_400  font_roboto  text-white text-center d-flex justify-content-center ">
+                        class=" fs_xxsm font_400  font_roboto text-white text-md-start text-center d-flex justify-content-center  ">
                         © Boddoohi &amp; Friedlander LLP 2024. All rights reserved. &nbsp;Attorney Advertising:
                         Prior results do not guarantee a
                         similar outcome.
