--- a/team.html
+++ b/team.html
@@ -395,36 +395,41 @@
     </section>
     <!-----------------------team page sectwo end -->
     <section class=" pt-lg-5 pb-lg-5 mx-auto bg-black section_margin_top"  id="anything">
-        <div class=" container  main_container mx-auto ">
-            <div class=" row pt-5 pb-5 d-flex justify-content-center  align-items-center">
-                <div class=" col-sm-6 px-3 ">
-                    <div class=" ">
-                        <h2 class=" Anything text-white fs_xl font_roboto ">
-                            <span class=" d-sm-block"> Anything you</span>
-                            need, we are here.
-                        </h2>
-                        <p class=" para_clr text-white  font_roboto fs_xsm mt-4 mb-3">
+        <div class=" container  main_container mx-auto">
+            <div class=" row pt-5 pb-5 d-flex justify-content-center align-items-center">
+                <div class=" col-sm-6 ps-4 ps-md-5 pt-2 pt-xl-3">
+                    <div>
+                        <h2 class=" Anything text-white fs_xl font_roboto"> Anything you need, we are here. </h2>
+                        <p class=" para_clr text-white font_roboto font_16 mt-4 mb-3">
                             Please reach out to us via phone, email, text, <span class=" d-sm-block">or the form
-                                here if you have any questions</span> for us.
+                                here if you have any questions for us.</span> 
                         </p>
                         <div class="my-3">
-                            <p class=" text-white fs_xsm  font_roboto fw_400 mb-3  ">
+                            <p class=" text-white font_16 font_roboto fw_400 mb-3  ">
                                 Boddoohi &amp; Friedlander LLP
                             </p>
-                            <a href="https://goo.gl/maps/MhVbDPtmKzWAweFJ6" target="_blank"
-                                class="text-white chng_clr_hover font_roboto">
-                                <span class="d-block"> New York City Office:</span>
-                                <span class="d-block"> 110 East 25th Street</span>
-                                <span class="d-block"> New York, New York 10010</span>
-                            </a>
+                           <div>
+                            <ul class="li_width">
+                             <li>
+                              <a href="https://goo.gl/maps/MhVbDPtmKzWAweFJ6" target="_blank"
+                              class="text-white chng_clr_hover font_roboto">
+                              <span class="d-block"> New York City Office:</span>
+                              <span class="d-block"> 110 East 25th Street</span>
+                              <span class="d-block"> New York, New York 10010</span>
+                          </a>
+                             </li>
+                          <li>
                             <a href="https://maps.app.goo.gl/YNKQEtyfB5RiSHks6" target="_blank"
-                                class="text-white chng_clr_hover font_roboto mt-3 d-block">
-                                <span class="d-block"> Hudson Valley Office:</span>
-                                <span class="d-block"> 291 Wall Street, 4th Floor</span>
-                                <span class="d-block"> Kingston, New York 12401</span>
-                            </a>
+                              class="text-white chng_clr_hover font_roboto mt-3 d-block">
+                              <span class="d-block"> Hudson Valley Office:</span>
+                              <span class="d-block"> 291 Wall Street, 4th Floor</span>
+                              <span class="d-block"> Kingston, New York 12401</span>
+                          </a>
+                          </li>
+                            </ul>
+                           </div>
                         </div>
-                        <p class=" text-white  fs_xsm  fw_400 font_roboto">Call or Text Us:</p>
+                        <p class=" text-white font_16 fw_400 font_roboto">Call or Text Us:</p>
                         <ul>
                             <li> <a href="tel:+
                     (347) 252 9922
@@ -436,13 +441,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-6 mt-4 mt-sm-0 px-3  ">
+                <div class="col-sm-6 mt-4 mt-sm-0 px-4">
                     <div>
                         <input type="text" required="" class="form_contact " id="contact-form-name"
                             placeholder="Your Name">
                     </div>
   
-                    <div class="mt-3 pt-1">
+                    <div class="mt-3 pt-2">
                         <input type="email" required="" class="form_contact" id="contact-form-email"
                             placeholder="Email">
                     </div>
@@ -455,7 +460,7 @@
                             id="contact-form-message" rows="3"></textarea>
                     </div>
                     <div class="mt-3 pt-1">
-                        <button type="submit" class=" contact_form_btn fs_xsm font_roboto  text-white">
+                        <button type="submit" class=" contact_form_btn font_16 font_roboto  text-white">
                             Submit message
                         </button>
                     </div>
@@ -465,31 +470,32 @@
     </section>
      <!-- ---------------------footer_start-------------------------- -->
      <section class="bg-black footer_margin section_margin_top">
-      <div class="coustam_container ">
-          <div class="row justify-content-center justify-content-lg-between text-center ">
-              <div class=" col-lg-2 d-none d-lg-block   p-0">
+      <div class="coustam_container pb-5 pb-lg-0 pt-xl-2">
+          <div class="row justify-content-center justify-content-lg-between text-center">
+              <div class="col-lg-1 d-none d-lg-block p-0">
                   <div>
                       <img class="mt-3 footer_img " src="./assets/img/Homepage/svg/footer-img.svg" alt="footer_img">
                   </div>
               </div>
-              <div class="col-12 col-lg-9 px-0 mb-0 px-lg-5  pt-lg-5 d-flex justify-sm-content-center align-items-sm-center align-items-lg-start flex-column ">
-                  <div class=" pt-5 mt-lg-5 d-sm-flex px-2 ">
+              <div class="col-12 col-md-10 col-lg-9 px-0 mb-0 px-lg-3 pt-md-2 pt-lg-5 d-flex justify-sm-content-center align-items-sm-center align-items-lg-start flex-column ">
+                  <div class=" pt-5 mt-2 mt-md-5 pt-md-4 mt-lg-5 d-sm-flex px-2">
                       <img class=" footer_logo_width cursor_pointer" src="./assets/img/Homepage/svg/logo.svg"
                           alt="footer_logo_width">
                   </div>
-                  <div class=" footer_line my-3 mt-5"></div>
-                  <div class="  d-sm-flex align-items-center mt-2 gap_178  ">
-                      <ul class="d-sm-flex align-items-center  gap-5 gap-xxl-5 px-3 px-md-0   ">
-                          <li> <a href="#real"
+                  <div class="footer_line my-3 mt-5"></div>
+                  <div class="d-sm-flex flex-md-column flex-lg-row align-items-center mt-2 gap_178">
+                      <ul class="d-sm-flex align-items-center gap-5 gap-xxl-5 px-3 px-md-0">
+                        <li class="mt-2"><a class="text_footer font_roboto fw_500" href="#banner-top">Back to Top</a></li>
+                          <li class="mt-2"> <a href="#real"
                                   class="text_footer  font_roboto fw_500">Practice
                                   Areas</a></li>
-                          <li>
-                              <a href="news.html" class="text_footer  font_roboto fw_500">News</a>
+                          <li class="mt-2">
+                              <a href="news.html" class="text_footer font_roboto fw_500">News</a>
                           </li>
-                          <li> <a href="team.html"
+                          <li class="mt-2"> <a href="team.html"
                                   class="text_footer  font_roboto fw_500">Team</a>
                           </li>
-                          <li> <a href="#anything" class="text_footer  font_roboto fw_500">Contact</a>
+                          <li class="mt-2"> <a href="#anything" class="text_footer font_roboto fw_500">Contact</a>
                           </li>
                       </ul>
                       <div class=" d-md-flex mt-lg-0 mt-4 mt-sm-0">
@@ -501,7 +507,6 @@
                                       fill="#FE6A5B"></path>
                               </svg>
                           </a>
-                         
                           <a href="https://www.instagram.com/thebflawfirm/" target="_blank">
                               <svg class="my_icon_footer" width="24" height="24" viewBox="0 0 24 24" fill="none"
                                   xmlns="http://www.w3.org/2000/svg">
@@ -518,25 +523,24 @@
                           </a>
                       </div>
                   </div>
-                  <div class="d-flex mt-sm-2 mt-4 pt-3 pt-sm-0  item-center pb-2 px-3 px-md-0">
-                      <p
-                          class=" fs_xxsm font_400  font_roboto text-white text-md-start text-center d-flex justify-content-center  ">
-                          © Boddoohi &amp; Friedlander LLP 2024. All rights reserved. &nbsp;Attorney Advertising:
+                  <div class="d-flex flex-column flex-lg-row mt-sm-2 mt-4 mt-md-5 mt-xl-2 pt-3 pt-sm-0 pb-2 px-3 px-md-0">
+                      <p class=" fs_xxsm font_400 line_height_100 font_roboto text-white ">
+                          © Boddoohi &amp; Friedlander LLP 2024.
+                      </p>
+                      <p class="fs_xxsm font_400 line_height_100 font_roboto text-white ">
+                        All rights reserved. &nbsp;
+                      </p>
+                      <p class="fs_xxsm font_400 line_height_100 font_roboto text-white">
+                        Attorney Advertising:
                           Prior results do not guarantee a
                           similar outcome.
-                      </p>
-                      <p class="fs_xxsm font_400  font_roboto  text-white ">
-  
-                      </p>
-                      <p class="fs_xxsm font_400  font_roboto  text-white">
-  
                       </p>
                   </div>
               </div>
           </div>
       </div>
       </section>
-        <button id="backToTopBtn"><img src="./assets/img/Homepage/svg/back_to_top.svg" alt="backtotop"></button>
+        <!-- <button id="backToTopBtn"><img src="./assets/img/Homepage/svg/back_to_top.svg" alt="backtotop"></button> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
