--- a/news.html
+++ b/news.html
@@ -85,7 +85,7 @@
                       </div>
                       <div class="ms-md-auto animation-element bounce-down mt-3 mt-md-0">
                         <img src="./assets/img/news/svg/news-bg.svg" class="desktop subject img_header d-none d-md-block" />
-                        <img src="./assets/img/news/svg/news-bg-mb.svg" class=" w-75 d-md-none" />
+                        <img src="./assets/img/news/svg/news-bg-mb.svg" class="img_b_news w-75 d-md-none" />
                       </div>
                     </div>
                   </div>
@@ -97,7 +97,7 @@
     </section>
     <section class="bg-white row_border section_margin_top px-5 px-sm-4">
         <div class="card_section_container px-5 px-sm-0">
-            <div class="row row_padding justify-content-center justify-content-lg-start">
+            <div class="row row_padding justify-content-center justify-content-md-start">
                 <div class="col-sm-6 col-lg-4 mb-lg-4 mb-sm-5 mb-md-4 d-flex justify-content-center justify-content-xl-start">
                     <div class="my_card">
                         <img class="news-img" src="./assets/img/news/png/imgtwo.png" alt="">
