--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@
 <body>
     <!-- ------------------team page secone start---------------------------- -->
     <section class=" bg-black overflow-hidden">
-        <div class=" custom_container">
+        <div class=" custom_container pb-xl-2">
             <div class="row justify-content-between align-items-center  align-items-xl-start">
                 <div class="col-xl-2">
                    <div class="d-flex justify-content-between align-items-center">
@@ -228,9 +228,8 @@
     <!-- -------------------team page secone end -->
     <!-----------------------team page sectwo start -->
     <section class=" overflow-hidden">
-        <div class=" custom_container">
-            <div class="row  align-items-center align-items-xl-start ">
-
+        <div class=" custom_container mt-xl-5 mb-xl-4 pt-xl-5 pb-xl-2 pb-xxl-4">
+            <div class="row  align-items-center align-items-xl-start">
                 <div class=" col-lg-6 mt-sm-4 px-0 ">
                     <div class="pt-5 px-3 d-lg-none ">
                         <h2 class="Cheryl_font fs_3xl text-black font_roboto mt-3">
@@ -281,7 +280,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class=" d-none d-md-block">
+                    <div class=" d-none d-md-block mb-md-5 pb-md-5">
                         <img class="w_100" src="./assets/img/Homepage/webp/co-founder-2.webp" alt="co-founder">
                     </div>
                 </div>
@@ -342,7 +341,7 @@
                     <div class=" d-md-none">
                         <img class="w_100" src="./assets/img/Homepage/webp/co-founder-2.webp" alt="co-founder">
                     </div>
-                    <div class=" px-3 mx-1 px-lg-0">
+                    <div class=" px-3 mx-1 px-lg-0 mb-md-5 pb-md-3">
                         <p class="team_section_para mw_550  text-black mt-4 font_16 mt-4   ">
                             For over a decade, Cheryl has represented a wide variety of
                             clients in transactional matters, from individuals and small
@@ -395,9 +394,9 @@
     </section>
     <!-----------------------team page sectwo end -->
     <section class=" pt-lg-5 pb-lg-5 mx-auto bg-black section_margin_top"  id="anything">
-        <div class=" container  main_container mx-auto">
+        <div class=" container  main_container mx-auto pb-lg-3">
             <div class=" row pt-5 pb-5 d-flex justify-content-center align-items-center">
-                <div class=" col-sm-6 ps-4 ps-md-5 pt-2 pt-xl-3">
+                <div class=" col-sm-6 ps-4 ps-md-5 pt-2 pt-xxl-4">
                     <div>
                         <h2 class=" Anything text-white fs_xl font_roboto"> Anything you need, we are here. </h2>
                         <p class=" para_clr text-white font_roboto font_16 mt-4 mb-3">
