--- a/index.html
+++ b/index.html
@@ -32,67 +32,71 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
-  <body class="overflow-x-hidden">
-   <section class=" position-relative min_h_100 overflow-hidden bg-black">
-            <div class=" z-n1 d-lg-block d-none">
-                <img class=" headers_bg " src="./assets/img/Homepage/svg/header-bg.svg" alt=" header_bg">
-                <img class=" characters_img" src="./assets/img/Homepage/webp/characters-home.webp"
-                    alt=" characters_img">
-            </div>
-            <nav>
-                <div class="coustam_container ">
-                    <div class="row align-content-center">
-                        <div
-                            class="col-lg-2 p-xl-5 ps-sm-5 px-md-5 p-lg-4 px-lg-4 mx-lg-3  px-0 d-flex flex-lg-column  align-items-center justify-content-between justify-content-lg-start ">
-                            <div class=" z-3 ps-2">
-                                <img class="cursor_pointer logo_w_180 pt-2 pt-md-3 pt-lg-0   "
-                                    src="./assets/img/Homepage/svg/logo.svg" alt=" nav_logo">
-                            </div>
-                            <ul class=" sm-screen pt-lg-5 mobile_view ps-xl-0" id="navbar">
-                                <li class="nav_links_padding nav_lineh "><a href="index.html"
-                                        class="fs_nav  nav_links font_roboto active" >Home</a></li>
-                                <li class="nav_links_padding nav_line"><a href="#real"
-                                        class="fs_nav nav_links font_roboto" >Practice
-                                        Areas</a></li>
-                                <li class="nav_links_padding nav_line"><a href="news.html"
-                                        class="fs_nav nav_links font_roboto" >News</a></li>
-                                <li class="nav_links_padding nav_line"><a href="team.html"
-                                        class="fs_nav nav_links font_roboto" >Team</a></li>
-                                <li class="nav_links_padding nav_line"><a href="#anything"
-                                        class="fs_nav nav_links font_roboto" >Contact</a>
-                                </li>
-                            </ul>
-                            <div onclick="openNav()" class="menu d-block d-xl-none z_7 pe-2">
-                              <span></span>
-                              <span class="my-2"></span>
-                              <span></span>
-                            </div>
-                        </div>
-                        <div id="home" class="col-lg-5 pt-lg-5 ms-md-5 ms-lg-0 ps-lg-2 ps-sm-5 z-1 position-relative border-grey-left  ">
-                            <div class=" ms-1 pt-3">
-                                <p class=" text-white fs_16  real_estate text-uppercase font_roboto mt-lg-5 pt-lg-5 pt-5">
-                                    REAL ESTATE. BUSINESS. CONSTRUCTION.
-                                </p>
-                                <h1 class=" text-white fs_4xl font_roboto adovcate_text text-uppercase mt_30 pb-4 ">we
-                                    <span class=" d-block">are</span> <span class="text_orange d-block">
-                                        advocates</span>
-                                </h1>
-                                <div class=" pt-xl-5 mt-lg-5">
-                                    <a href="#press"> <img class="icon_scrool  z_7 "
-                                            src="./assets/img/Homepage/svg/scroll-down.svg" alt=" scroll_down"></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div
-                            class=" col-lg-5 z-2 d-lg-none position-relative px-0 z-n1 margin_negative sm p-0 d-flex   ">
-                            <img class="header_bg  z-n1" src="./assets/img/Homepage/svg/header-bg.svg" alt=" header_bg">
-                            <img class=" characts_img   ms-auto" src="./assets/img/Homepage/webp/characters-home.webp"
-                                alt=" characters_img">
+  <body class="overflow-x-hidden ">
+    <div class="bg-black">
+   <div class="max_width mx-auto ">
+   <section class=" position-relative min_h_100 overflow-hidden ">
+    <div class=" z-n1 d-lg-block d-none">
+        <img class=" headers_bg " src="./assets/img/Homepage/svg/header-bg.svg" alt=" header_bg">
+        <img class=" characters_img" src="./assets/img/Homepage/webp/characters-home.webp"
+            alt=" characters_img">
+    </div>
+    <nav>
+        <div class="coustam_container ">
+            <div class="row align-content-center">
+                <div
+                    class="col-lg-2 p-xl-5 ps-sm-5 px-md-5 p-lg-4 px-lg-4 mx-lg-3  px-0 d-flex flex-lg-column  align-items-center justify-content-between justify-content-lg-start ">
+                    <div class=" z-3 ps-2">
+                        <img class="cursor_pointer logo_w_180 pt-2 pt-md-3 pt-lg-0   "
+                            src="./assets/img/Homepage/svg/logo.svg" alt=" nav_logo">
+                    </div>
+                    <ul class=" sm-screen pt-lg-5 mobile_view ps-xl-0" id="navbar">
+                        <li class="nav_links_padding nav_lineh "><a href="index.html"
+                                class="fs_nav  nav_links font_roboto active" >Home</a></li>
+                        <li class="nav_links_padding nav_line"><a href="#real"
+                                class="fs_nav nav_links font_roboto" >Practice
+                                Areas</a></li>
+                        <li class="nav_links_padding nav_line"><a href="news.html"
+                                class="fs_nav nav_links font_roboto" >News</a></li>
+                        <li class="nav_links_padding nav_line"><a href="team.html"
+                                class="fs_nav nav_links font_roboto" >Team</a></li>
+                        <li class="nav_links_padding nav_line"><a href="#anything"
+                                class="fs_nav nav_links font_roboto" >Contact</a>
+                        </li>
+                    </ul>
+                    <div onclick="openNav()" class="menu d-block d-xl-none z_7 pe-2">
+                      <span></span>
+                      <span class="my-2"></span>
+                      <span></span>
+                    </div>
+                </div>
+                <div id="home" class="col-lg-5 pt-lg-5 ms-md-5 ms-lg-0 ps-lg-2 ps-sm-5 z-1 position-relative border-grey-left  ">
+                    <div class=" ms-1 pt-3">
+                        <p class=" text-white fs_16  real_estate text-uppercase font_roboto mt-lg-5 pt-lg-5 pt-5">
+                            REAL ESTATE. BUSINESS. CONSTRUCTION.
+                        </p>
+                        <h1 class=" text-white fs_4xl font_roboto adovcate_text text-uppercase mt_30 pb-4 ">we
+                            <span class=" d-block">are</span> <span class="text_orange d-block">
+                                advocates</span>
+                        </h1>
+                        <div class=" pt-xl-5 mt-lg-5">
+                            <a href="#press"> <img class="icon_scrool  z_7 "
+                                    src="./assets/img/Homepage/svg/scroll-down.svg" alt=" scroll_down"></a>
                         </div>
                     </div>
                 </div>
-            </nav>
-    </section>
+                <div
+                    class=" col-lg-5 z-2 d-lg-none position-relative px-0 z-n1 margin_negative sm p-0 d-flex   ">
+                    <img class="header_bg  z-n1" src="./assets/img/Homepage/svg/header-bg.svg" alt=" header_bg">
+                    <img class=" characts_img   ms-auto" src="./assets/img/Homepage/webp/characters-home.webp"
+                        alt=" characters_img">
+                </div>
+            </div>
+        </div>
+    </nav>
+</section>
+</div>
+</div>
    <!-- ---------------------section_2 start------------------------- -->
    <section id="press" class=" bg-white pt-lg-1 pb-md-3 pb-lg-2 pb-xl-1 pt-xl-1 section_margin_bottom my-3">
     <div class=" coustam_container d-flex justify-content-center pt-5 pb-5 mt-md-5 mb-md-5">
@@ -592,29 +596,17 @@
                       </ul>
                   </div>
               </div>
-              <div class="col-sm-6 mt-4 mt-sm-0 px-4">
-                  <div>
-                      <input type="text" required="" class="form_contact " id="contact-form-name"
-                          placeholder="Your Name">
-                  </div>
-
-                  <div class="mt-3 pt-2">
-                      <input type="email" required="" class="form_contact" id="contact-form-email"
-                          placeholder="Email">
-                  </div>
-                  <div class="mt-3 pt-1">
-                      <input type="number" class="form_contact" required="" id="contact-form-number"
-                          placeholder="Phone Number">
-                  </div>
-                  <div class="mt-3 pt-1">
-                      <textarea class="form_contact" required="" placeholder="How can we help?"
-                          id="contact-form-message" rows="3"></textarea>
-                  </div>
-                  <div class="mt-3 pt-1">
-                      <button type="submit" class=" contact_form_btn font_16 font_roboto  text-white">
-                          Submit message
-                      </button>
-                  </div>
+              <div class="col-sm-6 mt-4 mt-sm-0 px-4 px-xxl-0">
+                <form id="myForm" onsubmit="submitForm(event)">
+                  <input class="form_contact" type="text" name="name" placeholder="Your Name">
+                  <br>
+                  <input class="form_contact" type="email" name="email" placeholder="Email">
+                  <br>
+                  <input class="form_contact" type="phone number" name="phone" placeholder="Phone">
+                  <br>
+                  <textarea class="form_contact" type="message" name="message" placeholder="How We Can Help ?"></textarea>
+                  <input class="contact_form_btn" type="submit" value="Submit">
+                </form>
               </div>
           </div>
       </div>
@@ -784,6 +776,12 @@
   document.body.classList.toggle("overflow_hidden");
   document.querySelector(".menu").classList.toggle("cross")
 }
+    </script>
+    <script>
+      function submitForm(event) {
+          event.preventDefault();
+          document.getElementById("myForm").reset();
+      }
     </script>
   </body>
   
