--- a/news.html
+++ b/news.html
@@ -489,28 +489,16 @@
                   </div>
               </div>
               <div class="col-sm-6 mt-4 mt-sm-0 px-4">
-                  <div>
-                      <input type="text" required="" class="form_contact " id="contact-form-name"
-                          placeholder="Your Name">
-                  </div>
-
-                  <div class="mt-3 pt-2">
-                      <input type="email" required="" class="form_contact" id="contact-form-email"
-                          placeholder="Email">
-                  </div>
-                  <div class="mt-3 pt-1">
-                      <input type="number" class="form_contact" required="" id="contact-form-number"
-                          placeholder="Phone Number">
-                  </div>
-                  <div class="mt-3 pt-1">
-                      <textarea class="form_contact" required="" placeholder="How can we help?"
-                          id="contact-form-message" rows="3"></textarea>
-                  </div>
-                  <div class="mt-3 pt-1">
-                      <button type="submit" class=" contact_form_btn font_16 font_roboto  text-white">
-                          Submit message
-                      </button>
-                  </div>
+                <form id="myForm" onsubmit="submitForm(event)">
+                  <input class="form_contact" type="text" name="name" placeholder="Your Name">
+                  <br>
+                  <input class="form_contact" type="email" name="email" placeholder="Email">
+                  <br>
+                  <input class="form_contact" type="phone number" name="phone" placeholder="Phone">
+                  <br>
+                  <textarea class="form_contact" type="message" name="message" placeholder="How We Can Help ?"></textarea>
+                  <input class="contact_form_btn" type="submit" value="Submit">
+                </form>
               </div>
           </div>
       </div>
@@ -619,6 +607,12 @@
     document.body.classList.toggle("overflow_hidden");
     document.querySelector(".menu").classList.toggle("cross")
   }
+      </script>
+       <script>
+        function submitForm(event) {
+            event.preventDefault();
+            document.getElementById("myForm").reset();
+        }
       </script>
   </body>
 </html>
