--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body class="overflow-x-hidden ">
     <div class="bg-black">
    <div class="max_width mx-auto ">
-   <section class=" position-relative min_h_100 overflow-hidden ">
+   <section class=" position-relative min_h_100 overflow-hidden " id="banner-top">
     <div class=" z-n1 d-lg-block d-none">
         <img class=" headers_bg " src="./assets/img/Homepage/svg/header-bg.svg" alt=" header_bg">
         <img class=" characters_img" src="./assets/img/Homepage/webp/characters-home.webp"
