--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/root.css">
   </head>
   <body class="bg-black overflow-x-hidden">
-    <section>
+    <section id="banner-top">
         <div class="header" id="banner-top">
             <div class="my_container ">
               <div class="row m-0 p-0 position-relative ps-2 pe-2 pe-lg-0 ps-lg-0">
@@ -578,25 +578,17 @@
 <!-- <button id="backToTopBtn"><img  src="./assets/img/news/svg/back_to_top.svg" alt="backtotop"></button> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
-      // Get a reference to the back to top button
     var backToTopBtn = document.getElementById("backToTopBtn");
-    
-    // Add a click event listener to scroll to the top when the button is clicked
     backToTopBtn.addEventListener("click", function() {
-      // Scroll to the top of the page smoothly
       window.scrollTo({
         top: 0,
         behavior: "smooth"
       });
     });
-    
-    // Show or hide the back to top button based on the user's scroll position
     window.addEventListener("scroll", function() {
       if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        // If the user has scrolled down more than 20px from the top, show the button
         backToTopBtn.classList.add("visible");
       } else {
-        // Otherwise, hide the button
         backToTopBtn.classList.remove("visible");
       }
     });
