--- a/news.html
+++ b/news.html
@@ -518,7 +518,7 @@
                         alt="footer_logo_width">
                 </div>
                 <div class="footer_line my-3 mt-5"></div>
-                <div class="d-sm-flex flex-md-column flex-lg-row align-items-center mt-2 gap_178">
+                <div class="d-sm-flex flex-sm-column flex-lg-row align-items-center mt-2 gap_178">
                     <ul class="d-sm-flex align-items-center gap-5 gap-xxl-5 px-3 px-md-0">
                       <li class="mt-2"><a class="text_footer font_roboto fw_500" href="#banner-top">Back to Top</a></li>
                         <li class="mt-2"> <a href="#real"
@@ -558,7 +558,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-lg-row mt-sm-2 mt-4 mt-md-5 mt-xl-2 pt-3 pt-sm-0 pb-2 px-3 px-md-0">
+                <div class="d-flex flex-column flex-lg-row mt-sm-4 mt-4 mt-md-5 mt-xl-2 pt-3 pt-sm-0 pb-2 px-3 px-md-0">
                     <p class=" fs_xxsm font_400 line_height_100 font_roboto text-white ">
                         © Boddoohi &amp; Friedlander LLP 2024.
                     </p>
